--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
     }
   ],
   "require": {
-    "php": "^8.2 || ^8.3 || ^8.4",
-    "laravel/framework": "^12.0 || ^11.0 || ^10.0 || ^9.0"
+    "php": ">=8.1",
+    "illuminate/support": "^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.0 || ^10.0 || ^9.6",
     "mockery/mockery": "^1.6",
-    "orchestra/testbench": "9.0" 
+    "orchestra/testbench": "^8.0|^9.0|^10.0"
   },
   "autoload": {
     "psr-4": {
