--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
   ],
   "require": {
     "php": ">=8.1",
-    "illuminate/support": "^10.0|^11.0|^12.0"
+    "illuminate/support": "^10.0|^11.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^11.0 || ^10.0 || ^9.6",
     "mockery/mockery": "^1.6",
-    "orchestra/testbench": "^8.0|^9.0|^10.0"
+    "orchestra/testbench": "^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
