--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,15 +14,11 @@ jobs:
       fail-fast: false
       matrix:
         php: [8.2, 8.3, 8.4]
-        laravel: [9.*, 10.*, 11.*, 12.*]
+        laravel: [10.*, 11.*]
         include:
-          - laravel: 9.*
-            testbench: ^7.0
           - laravel: 10.*
             testbench: ^8.0
           - laravel: 11.*
-            testbench: ^9.0
-          - laravel: 12.*
             testbench: ^9.0
 
     name: PHP ${{ matrix.php }} / Laravel ${{ matrix.laravel }}
